# beancount_portfolio_allocation

./: .gitignore  .travis.yml  Changelog.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
beancount_portfolio_allocation/: __init__.py  allocation.py  allocation_report.py  loader.py
src/beancount_portfolio_allocation/: allocation_report.py  loader.py
tests/: allocation_multicurrency_test.py  allocation_report_test.py  cash_based_account_report_test.py  missing_prices_test.py  no_operating_currency_test.py  test-portfolio.beancount  test-zero-position.beancount  valid_reports_test.py  zero_position_test.py
tests/test_inputs/: account_based_asset_class.beancount  missing_prices.beancount  no-main-currency.beancount  portfolio.beancount
